--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -342,7 +342,7 @@ export const check = (input: any): input is IMember => {
         **Why not support non-standard compilers?**
     </AlertTitle>
 
-Non-standard TypeScript compilers are removing every type informations, and skipping type checkings for repid compilation. By the way, without those type informations, `typia` can't do anything. This is the reason why `typia` doesn't support non-standard TypeScript compilers.
+Non-standard TypeScript compilers are removing every type informations, and skipping type checkings for rapid compilation. By the way, without those type informations, `typia` can't do anything. This is the reason why `typia` doesn't support non-standard TypeScript compilers.
 
 By the way, [SWC](https://swc.rs) is preparing a new project [STC](https://github.com/dudykr/stc) keeping type informations. Therefore, `typia` will support it.
 
