--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -294,7 +294,7 @@ yarn typia generate \
 
 For frontend projects.
 
-If you're using non-standard TypeScript compiler, you can't use [transform mode
+If you're using non-standard TypeScript compiler, you can't use [transform mode](#transformation)
 
   - Non-standard TypeScript compilers:
     - [SWC](https://swc.rs/) in Next.JS
