--- a/website/pages/docs/validators/tags.mdx
+++ b/website/pages/docs/validators/tags.mdx
@@ -38,7 +38,7 @@ interface CustomTag {
      */
     string: string;
 
-    pattern: string & tags.Format<"^[a-z]+$">;
+    pattern: string & tags.Pattern<"^[a-z]+$">;
 
     /**
      * Type tag can perform union type.
