--- a/website/pages/docs/utilization/nestjs.mdx
+++ b/website/pages/docs/utilization/nestjs.mdx
@@ -16,7 +16,7 @@ export class BbsArticlesController {
     /** 
      * Store a new content.
      * 
-     * @param inupt Content to store
+     * @param input Content to store
      * @returns Newly archived article
      */
     @TypedRoute.Post() // 200x faster and safer JSON.stringify()
