--- a/website/pages/docs/json/parse.mdx
+++ b/website/pages/docs/json/parse.mdx
@@ -82,7 +82,7 @@ export namespace IValidation {
  * Others                  | No change
  *
  * @template Instance Target argument type.
- * @author Jenogho Nam - https://github.com/samchon
+ * @author Jeongho Nam - https://github.com/samchon
  * @author Kyungsu Kang - https://github.com/kakasoo
  * @author Michael - https://github.com/8471919
  */
@@ -411,7 +411,7 @@ console.log(json === JSON.stringify(parsed)); // true
  * Others                  | No change
  *
  * @template Instance Target argument type.
- * @author Jenogho Nam - https://github.com/samchon
+ * @author Jeongho Nam - https://github.com/samchon
  * @author Kyungsu Kang - https://github.com/kakasoo
  * @author Michael - https://github.com/8471919
  */
