--- a/website/pages/docs/protobuf/decode.mdx
+++ b/website/pages/docs/protobuf/decode.mdx
@@ -80,7 +80,7 @@ export namespace IValidation {
  * Native Class or Others  | No change
  *
  * @template Instance Target argument type.
- * @author Jenogho Nam - https://github.com/samchon
+ * @author Jeongho Nam - https://github.com/samchon
  * @author Kyungsu Kang - https://github.com/kakasoo
  */
 export type Resolved<T> = Equal<T, ResolvedMain<T>> extends true
@@ -709,7 +709,7 @@ export namespace IValidation {
  * Native Class or Others  | No change
  *
  * @template Instance Target argument type.
- * @author Jenogho Nam - https://github.com/samchon
+ * @author Jeongho Nam - https://github.com/samchon
  * @author Kyungsu Kang - https://github.com/kakasoo
  */
 export type Resolved<T> = Equal<T, ResolvedMain<T>> extends true
