Fix invalid links of random.mdx

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -2,7 +2,7 @@ import { Tabs, Tab } from 'nextra-theme-docs'
 import Alert from '@mui/material/Alert';
 import Stack from '@mui/material/Stack';
 
-<meta http-equiv="refresh" content="0; url=/docs" />
+<meta httpEquiv="refresh" content="0; url=/docs" />
 
 ## Outline
 
