--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -42,7 +42,7 @@ import Stack from '@mui/material/Stack';
 ))}
 </span>
 
-```typescript copy
+```typescript
 // RUNTIME VALIDATORS
 export function is<T>(input: unknown): input is T; // returns boolean
 export function assert<T>(input: unknown): T; // throws TypeGuardError
