Enhance Yarn Berry Comment
This comment is misleading and may lead to users assuming it is not possible to use yarn berry at all.  

Instead, link to the github and indicate it can stll be used manually - at the moment this is not linked in docs that i could find and i almost left the site!

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -20,7 +20,9 @@ pnpm typia setup --manager pnpm
     </Tab>
     <Tab>
 ```bash filename="Terminal" showLineNumbers copy
-# YARN BERRY IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YOU MUST SETUP MANUALLY
+# @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn add typia
 yarn typia setup --manager yarn
 ```
@@ -151,7 +153,9 @@ pnpm typia setup --manager pnpm
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YOU MUST SETUP MANUALLY
+# @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn add typia
 yarn typia setup --manager yarn
 ```
@@ -178,7 +182,9 @@ pnpm install --save-dev typescript ts-patch ts-node
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YOU MUST SETUP MANUALLY
+# @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn add typia
 yarn add -D typescript ts-patch ts-node
 ```
@@ -234,7 +240,9 @@ pnpm prepare
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YOU MUST SETUP MANUALLY
+# @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn prepare
 ```
     </Tab>
@@ -401,7 +409,9 @@ pnpm install --save-dev webpack webpack-cli
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 ##############################
-# YARN BERRY IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YOU MUST SETUP MANUALLY
+# @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 ##############################
 # TYPIA
 yarn add typia
