--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -20,7 +20,7 @@ pnpm typia setup --manager pnpm
     </Tab>
     <Tab>
 ```bash filename="Terminal" showLineNumbers copy
-# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED (yarn typia setup ...)
 # YOU MUST SETUP MANUALLY
 # @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn add typia
@@ -153,7 +153,7 @@ pnpm typia setup --manager pnpm
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED (yarn typia setup ...)
 # YOU MUST SETUP MANUALLY
 # @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn add typia
@@ -182,7 +182,7 @@ pnpm install --save-dev typescript ts-patch ts-node
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED (yarn typia setup ...)
 # YOU MUST SETUP MANUALLY
 # @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn add typia
@@ -240,7 +240,7 @@ pnpm prepare
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED (yarn typia setup ...)
 # YOU MUST SETUP MANUALLY
 # @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 yarn prepare
@@ -409,7 +409,7 @@ pnpm install --save-dev webpack webpack-cli
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 ##############################
-# YARN BERRY AUTO SETUP IS NOT SUPPORTED
+# YARN BERRY AUTO SETUP IS NOT SUPPORTED (yarn typia setup ...)
 # YOU MUST SETUP MANUALLY
 # @see [Github Issue: 840](https://github.com/samchon/typia/pull/840)
 ##############################
